# Censor_me

./: .env.example  .gitignore  CLAUDE.md  Censor_me_spec.md  PRODUCT DESIGN SPECIFICATION.md  README.md  SETUP.md  install_all.bat  pyproject.toml  start_all.bat  start_backend.bat  start_frontend.bat
.claude/: settings.local.json
.github/workflows/: build.yml
backend/: __main__.py  config.py  main.py
backend/api/: batch.py  export.py  presets.py  projects.py  rules.py  scan.py  system.py  video.py
backend/data/presets/: customer_support_chat.json  forms_and_tables.json  quick_review.json  screen_recording_pii.json  thorough_scan.json
backend/models/: events.py  project.py  rules.py
backend/services/: batch_orchestrator.py  event_linker.py  face_detector.py  frame_sampler.py  gpu_installer.py  ocr_service.py  pii_classifier.py  preset_service.py  project_store.py  redaction_renderer.py  report_service.py  scan_orchestrator.py  tracker_service.py  video_service.py
backend/tests/: conftest.py  test_event_linker.py  test_pii_classifier.py  test_redaction_renderer.py
backend/utils/: ffmpeg_path.py  gpu_detect.py  model_paths.py  scene_detect.py  startup.py
docs/: packaging-plan.md
frontend/: .eslintrc.cjs  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ErrorBoundary.tsx  ToastContainer.tsx
frontend/src/components/AboutDialog/: AboutDialog.tsx
frontend/src/components/BatchPanel/: BatchPanel.tsx
frontend/src/components/FindingsPanel/: FindingsPanel.tsx
frontend/src/components/Inspector/: Inspector.tsx
frontend/src/components/Settings/: SettingsModal.tsx
frontend/src/components/SetupWizard/: SetupWizard.tsx
frontend/src/components/VideoPreview/: FrameTestModal.tsx  OverlayCanvas.tsx  Timeline.tsx  VideoPreview.tsx
frontend/src/hooks/: useExportProgress.ts  useKeyboard.ts  useScanProgress.ts
frontend/src/store/: projectStore.ts
frontend/src/styles/: animations.css  components.css  fonts.css  form-controls.css  theme.ts  tokens.css
frontend/src/types/: index.ts
frontend/src/utils/: format.ts
scripts/: build-portable.py  generate-icons.py  install-pytorch.ps1  install-pytorch.sh
src-tauri/: Cargo.toml  splash.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
