[project]
name = "censor-me"
version = "0.1.0"
description = "Local GPU-accelerated video PII redaction"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.12",

    # Video processing
    "ffmpeg-python>=0.2.0",
    "opencv-python>=4.10.0",

    # OCR — EasyOCR (PyTorch-based; GPU auto-detected via CUDA)
    "easyocr>=1.7.0",

    # PII detection
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.0",
    # Note: also run `uv pip install pip` in the venv so Presidio can auto-download
    # en_core_web_lg (~400 MB) on first startup. No manual spacy download needed.

    # Pin chardet to the version range requests 2.x supports (chardet 7+ causes a warning)
    "chardet>=3.0.2,<4",

    # Scene detection
    "scenedetect[opencv]>=0.6.0",

    # Data validation
    "pydantic>=2.7.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",  # for FastAPI test client
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
