[project]
name = "censor-me"
version = "0.1.0"
description = "Local GPU-accelerated video PII redaction"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.12",

    # Video processing
    "ffmpeg-python>=0.2.0",
    "opencv-contrib-python>=4.10.0",

    # OCR — EasyOCR (PyTorch-based; GPU auto-detected via CUDA)
    "easyocr>=1.7.0",

    # PII detection
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.0",
    # Note: also run `uv pip install pip` in the venv so Presidio can auto-download
    # en_core_web_lg (~400 MB) on first startup. No manual spacy download needed.

    # Pin chardet to the version range requests 2.x supports (chardet 7+ causes a warning)
    "chardet>=3.0.2,<4",

    # Scene detection
    "scenedetect>=0.6.0",

    # Data validation
    "pydantic>=2.7.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",  # for FastAPI test client
    "ruff>=0.4.0",
]

# Override easyocr's opencv-python-headless dep → use opencv-contrib-python instead.
# All three opencv-* packages install into the same cv2 namespace and conflict;
# only opencv-contrib-python ships the CSRT tracker we need for tracking.
[tool.uv]
# Ensure `uv sync` pulls CUDA-enabled PyTorch, not the CPU-only default from PyPI.
index-url = "https://pypi.org/simple"
extra-index-url = ["https://download.pytorch.org/whl/cu130"]

override-dependencies = [
    # Block opencv-python-headless/opencv-python from being installed transitively
    # (easyocr depends on opencv-python-headless). All three opencv-* packages
    # install into the same cv2 namespace; only opencv-contrib-python ships the
    # CSRT tracker we need.
    "opencv-python-headless>=4.10.0 ; python_version < '0'",  # never install
    "opencv-python>=4.10.0 ; python_version < '0'",           # never install
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
